# rust_roguelike_tutorial

./: .gitignore  .~lock.tooltip positioning diagram.ods#  Cargo.toml  DESIGN_DOC.md  README.md  build_wasm.sh  tooltip positioning diagram  tooltip positioning diagram.ods
.github/workflows/: main.yml
data/: spawns.json
src/: animal_ai_system.rs  bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  main  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  mobs.rs  monsters.rs  movement_system.rs  particle_system.rs  player.rs  random_table.rs  ranged_combat_system.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/ai/: adjacent_ai_system.rs  animal_ai_system.rs  approach_ai_system.rs  bystander_ai_system.rs  chase_ai_system.rs  default_ai_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  monster_ai_system.rs  quipping.rs  turn_status.rs  visible_ai_system.rs
src/data/: data_master.rs  faction_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  spawn_table_structs.rs
src/effects/: damage.rs  hunger.rs  mod.rs  movement.rs  particles.rs  targeting.rs  triggers.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/inventory/: collection_system.rs  drop_system.rs  identification_system.rs  mod.rs  remove_system.rs  use_equip.rs  use_system.rs
src/map/: mod.rs  (+3 more)
wasm/: index.html  rust_hello.js  rust_hello_bg.wasm  rust_roguelike.js  rust_roguelike_bg.js  rust_roguelike_bg.wasm
(+48 files in other folders)
