[package]
name = "rust_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
itertools = "0.13.0"
lazy_static = "1.4.0"
